--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "antd": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^7.1.3"
+    "react-pdf": "^7.1.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
